--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "express": "^4.19.2",
     "ejs": "^3.1.9",
-    "nodemon": "^2.0.20"
+    "nodemon": "^2.0.20",
+    "mongoose": "^8.2.4"
   }
 }
