--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "nodemon": "^2.0.20",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
-    "passport-local-mongoose": "^8.0.0"
+    "passport-local-mongoose": "^8.0.0",
+    "socket.io": "^4.7.5"
   }
 }
