--- a/package.json
+++ b/package.json
@@ -17,10 +17,13 @@
     "express": "^4.19.2",
     "express-session": "^1.18.0",
     "mongoose": "^8.2.4",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.0",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^8.0.0",
-    "socket.io": "^4.7.5"
+    "path": "^0.12.7",
+    "socket.io": "^4.7.5",
+    "uuid": "^9.0.1"
   }
 }
