--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-MONGO_URI=mongodb+srv://amaljoy246:w0TkPmt3lnoH2mky@cluster0.nfo2sth.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+MONGO_URI=mongodb+srv://amaljoy246:w0TkPmt3lnoH2mky@cluster0.nfo2sth.mongodb.net/OpenTalk?retryWrites=true&w=majority&appName=Cluster0
