--- a/vercel.json
+++ b/vercel.json
@@ -1,2 +1,2 @@
 { "version": 2,"builds":[{"src":"./app.js" ,"use":"@vercel/node"}],
- "rewrites": [{ "source": "/(.*)", "destination": "/api" }] }
+ "rewrites": [{ "source": "/(.*)", "destination": "/" }] }
