--- a/vercel.json
+++ b/vercel.json
@@ -1,2 +1,4 @@
-{ "version": 2,"builds":[{"src":"./app.js" ,"use":"@vercel/node"}],
- "rewrites": [{ "source": "/(.*)", "destination": "/" }] }
+{ "version": 2,
+"builds":[{"src":"api/index.js" ,"use":"@vercel/node"}],
+ "routes": [{ "src": "/(.*)", "dest": "api/index.js" }]
+ }
